# ants-colony-ai

./: .dockerignore  .gitignore  ANTS_6.2_MUDANCAS.md  ANTS_6.3_MUDANCAS.md  AUDITORIA_6.3.md  COMO_USAR.txt  DEPLOY.md  DIAGNOSTICO_10_PERGUNTAS.md  DIAGNOSTICO_7.2.md  ESTADO_ATUAL.md  INFRA_ATUAL.md  PROMPT_MESTRE_CLAUDE_CODE.md  README.md  fly.toml  railway.json  render.yaml  requirements-cloud.txt  requirements.txt
.github/workflows/: ci.yml  (+1 more)
app/: .gitignore  README.md  ants_backend.spec  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
backend/: core.py  lazy_loader.py
deploy/: Dockerfile  docker-compose.yml  fly.toml  railway.json  render.yaml
design_reference/: ants-command-redesign.html
scripts/: build_all.sh  build_app.sh  build_backend_binary.sh  build_website.sh  deploy_cloud.sh  start.sh  start_cloud.sh  test_all.sh
tests/: conftest.py  test_autonomy_observer.py  test_bots.py  test_cascade_search.py  test_cognitive_fallback.py  test_core_memory.py  test_deterministic_cortex.py  test_dna_persistence.py  test_feedback_loop.py  test_formations.py  test_hive_api.py  test_hivemind_cognition.py  test_mission_trace.py  test_persistence.py  test_planner.py  test_providers.py  test_recruitment_chain.py  test_recruitment_trust_63.py  test_relevance_gate.py  test_screen_reader.py  test_swarm_and_quality.py  test_traditions_persistence.py
web/: RESUMO_INTERFACE.txt  acesso.html  index.html  manifest.json  sw.js
(+268 files in other folders)
