[package]
name = "ants"
version = "6.0.0"
description = "Ant's — Superorganismo Digital"
authors = ["Ant's"]
edition = "2021"
rust-version = "1.77"

# lib para suportar desktop e mobile (Android/iOS) com o mesmo core.
[lib]
name = "ants_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

[features]
# usado pelo tauri em builds mobile
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
